@@ -1,3 +1,8 @@
+(13/09/16)
+==========
+
+· Added Games > Giana's return. Updated Spectrum emulator unrealspeccy to 0.0.69.1
+
 (12/09/16)
 ==========
 
